# s2_l6

./: CMakeLists.txt  README  README.md  main.cpp  spo_kolibri.csv
sql/: 00_create_db.sql  01_schema.sql  02_import_stage.sql  02_seed.sql  03_normalize.sql  03_queries.sql  10_add.sql  20_find_fio.sql  30_find_phone.sql  40_inn_by_snils.sql  50_delete.sql  INSERT.pgsql  queries.sql
src/: db.cpp  db.hpp  kolibri_repo.cpp  kolibri_repo.hpp  main.cpp  models.cpp  models.hpp
